k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-basic
  name: python-basic
spec:
  type: NodePort
  ports:
    - name: 8081-tcp
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: python-basic
